src/test/test-models/bad/validate_set_double_offset_multiplier_bad1.stan
parameters {
  vector[3] vvv;
  real<offset=vvv> a;
  real y;
}

model {
  y ~ normal(0,1);
}
